Add renderer_draw_texture function

--- a/src/mng/CMakeLists.txt
+++ b/src/mng/CMakeLists.txt
@@ -1,7 +1,8 @@
 add_library(mng
     vector2.c
-    window.c
-    renderer.c
+    transform.c
     texture.c
     loaders.c
+    window.c
+    renderer.c
 )
