--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,10 @@ set(pong_VERSION_REVISION 0)
 
 # Configs
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -Wall -Wextra -Wpedantic \
+    -Wformat=2 -Wno-unused-parameter -Wshadow \
+    -Wwrite-strings -Wstrict-prototypes -Wold-style-definition \
+    -Wredundant-decls -Wnested-externs -Wmissing-include-dirs")
 
 # Libs
 include(FindPkgConfig)
