--- a/src/mng/SConscript
+++ b/src/mng/SConscript
@@ -7,6 +7,7 @@ env.ParseConfig('pkg-config SDL2_image --cflags --libs')
 env.SharedLibrary('mng', [
     'types.c',
     'point.c',
+    'size.c',
     'math.c',
     'random.c',
     'vector2.c',
