--- a/src/mng/SConscript
+++ b/src/mng/SConscript
@@ -5,18 +5,18 @@ env.ParseConfig('pkg-config sdl2 --cflags --libs')
 env.ParseConfig('pkg-config SDL2_image --cflags --libs')
 
 env.SharedLibrary('mng', [
-    'types.c',
-    'point.c',
-    'size.c',
-    'math.c',
-    'random.c',
-    'vector2.c',
-    'timer.c',
-    'texture.c',
-    'sprite.c',
-    'resources.c',
-    'window.c',
-    'renderer.c',
-    'game.c',
     'engine.c',
+    'game.c',
+    'math.c',
+    'point.c',
+    'random.c',
+    'rect.c',
+    'renderer.c',
+    'resources.c',
+    'size.c',
+    'sprite.c',
+    'texture.c',
+    'timer.c',
+    'vector2.c',
+    'window.c',
 ])
