Use env.Configure

--- a/examples/pong/SConscript
+++ b/examples/pong/SConscript
@@ -2,7 +2,7 @@ Import('env')
 env = env.Clone()
 env.ParseConfig('pkg-config sdl2 --cflags --libs')
 
-conf = Configure(env)
+conf = env.Configure()
 if not conf.CheckLib('m'):
     print('Did not find libm.a or m.lib, exiting!')
     Exit(1)
